--- a/gotendance/static/css/pages/records.css
+++ b/gotendance/static/css/pages/records.css
@@ -35,7 +35,7 @@
     align-items: center;
     height: 100%;
     background-color: rgb(50,50,50);
-    padding: 0.6em;
+    padding: 0.55em 0.6em;
     border-radius: 0.5em 0em 0em 0.5em;
 }
 
@@ -59,4 +59,14 @@
 
 .icon-tabler-square {
     color: rgb(40, 104, 40);
+}
+
+@media (prefers-color-scheme: light) {
+    .toggle-attendance:hover {
+        background-color: rgba(186, 186, 186, 0.336);
+    }
+
+    .search-bar, .search-icon-container {
+        background-color: rgb(197, 197, 197);
+    }
 }
